--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - MONGODB_URI=mongodb+srv://jai_alluri:Luckyman123@clusteremailservice.sty6b.mongodb.net/emailservice?retryWrites=true&w=majority
-      - EMAIL_USER=smartscript22@gmail.com
-      - EMAIL_PASSWORD=nphhcokujjfhvquw
+       - MONGODB_URI=your_mongodb_uri
+        - EMAIL_USER=your_email@gmail.com
+        - EMAIL_PASSWORD=your_email_password
     depends_on:
       - mongodb
     restart: unless-stopped
